// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html normalizer <Label onClick=doClick..">Hello, World</Label> 1`] = `
Object {
  "actual": "<Label onClick=\\"doClick..\\" xmlns=\\"http://www.w3.org/1999/xhtml\\">Hello, World</Label>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"onClick\\" missed start quot(\\")!!",
      Object {
        "columnNumber": 27,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer <div a=& bb c d=123&&456/> 1`] = `
Object {
  "actual": "<div a=\\"&amp;\\" bb=\\"bb\\" c=\\"c\\" d=\\"123&amp;&amp;456\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"&\\" missed quot(\\")!!",
      Object {
        "columnNumber": 17,
        "lineNumber": 1,
      },
    ],
    Array [
      "warning",
      "attribute \\"123&&456\\" missed quot(\\")!",
      Object {
        "columnNumber": 17,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer <div test="a<b&&a< c && a>d"></div> 1`] = `
Object {
  "actual": "<div test=\\"a&lt;b&amp;&amp;a&lt; c &amp;&amp; a&gt;d\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
}
`;

exports[`html normalizer <div test="alert('<br/>')"/> 1`] = `
Object {
  "actual": "<div test=\\"alert('&lt;br/&gt;')\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
}
`;

exports[`html normalizer <div>&amp;&lt;123&456<789;&&</div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\">&amp;&lt;123&amp;456&lt;789;&amp;&amp;</div>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: invalid tagName:789;&&<",
      Object {
        "columnNumber": 23,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer <div>&nbsp;&copy;&nbsp&copy</div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\"> ©&amp;nbsp&amp;copy</div>",
}
`;

exports[`html normalizer <div><123e>&<a<br/></div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\">&lt;123e&gt;&amp;&lt;a<br/></div>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: invalid tagName:123e",
      Object {
        "columnNumber": 15,
        "lineNumber": 1,
      },
    ],
    Array [
      "error",
      "element parse error: Error: invalid tagName:a<br",
      Object {
        "columnNumber": 15,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer <html test="123"/> 1`] = `
Object {
  "actual": "<html test=\\"123\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
}
`;

exports[`html normalizer <html test="a<b && a>b && '&amp;&&'"/> 1`] = `
Object {
  "actual": "<html test=\\"a&lt;b &amp;&amp; a&gt;b &amp;&amp; '&amp;&amp;&amp;'\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
}
`;

exports[`html normalizer <html xmlns:x="1"><body/></html> 1`] = `
Object {
  "actual": "<html xmlns:x=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"><body></body></html>",
}
`;

exports[`html normalizer <r><Label onClick="doClick..>Hello, World</Label></r> 1`] = `
Object {
  "actual": "<r xmlns=\\"http://www.w3.org/1999/xhtml\\">&lt;Label onClick=\\"doClick..&gt;Hello, World</r>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: attribute value no end '\\"' match",
      Object {
        "columnNumber": 5,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/html: script <input type="button" disabled></input> 1`] = `
Object {
  "actual": "<input type=\\"button\\" disabled=\\"disabled\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"/>",
}
`;

exports[`html normalizer text/html: script <input type="checkbox" checked></input> 1`] = `
Object {
  "actual": "<input type=\\"checkbox\\" checked=\\"checked\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"/>",
}
`;

exports[`html normalizer text/html: script <option selected></option> 1`] = `
Object {
  "actual": "<option selected=\\"selected\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></option>",
}
`;

exports[`html normalizer text/html: script <script src="./test.js"/> 1`] = `
Object {
  "actual": "<script src=\\"./test.js\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></script>",
}
`;

exports[`html normalizer text/html: script <script>alert(a<b&&c?"<br/>":">>");</script> 1`] = `
Object {
  "actual": "<script xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a<b&&c?\\"<br/>\\":\\">>\\");</script>",
}
`;

exports[`html normalizer text/html: script <script>alert(a<b&&c?"<br>":">>");</script> 1`] = `
Object {
  "actual": "<script xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a<b&&c?\\"<br>\\":\\">>\\");</script>",
}
`;

exports[`html normalizer text/html: script <textarea>alert(a<b&&c?"<br>":">>");</textarea> 1`] = `
Object {
  "actual": "<textarea xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a&lt;b&amp;&amp;c?\\"&lt;br&gt;\\":\\"&gt;&gt;\\");</textarea>",
}
`;

exports[`html normalizer text/html: script <ul><li>abc<li>def</ul> 1`] = `
Object {
  "actual": "<ul xmlns=\\"http://www.w3.org/1999/xhtml\\"><li></li>abc<li></li>def</ul>",
}
`;

exports[`html normalizer text/xml: script <input type="button" disabled></input> 1`] = `
Object {
  "actual": "<input type=\\"button\\" disabled=\\"disabled\\"/>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"disabled\\" missed value!! \\"disabled\\" instead!!",
      Object {
        "columnNumber": 22,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <input type="checkbox" checked></input> 1`] = `
Object {
  "actual": "<input type=\\"checkbox\\" checked=\\"checked\\"/>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"checked\\" missed value!! \\"checked\\" instead!!",
      Object {
        "columnNumber": 24,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <option selected></option> 1`] = `
Object {
  "actual": "<option selected=\\"selected\\"/>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"selected\\" missed value!! \\"selected\\" instead!!",
      Object {
        "columnNumber": 9,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <script src="./test.js"/> 1`] = `
Object {
  "actual": "<script src=\\"./test.js\\"/>",
}
`;

exports[`html normalizer text/xml: script <script>alert(a<b&&c?"<br/>":">>");</script> 1`] = `
Object {
  "actual": "<script>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\"&gt;&gt;\\");</script>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: attribute value must after \\"=\\"",
      Object {
        "columnNumber": 28,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <script>alert(a<b&&c?"<br>":">>");</script> 1`] = `
Object {
  "actual": "<script>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\"&gt;&gt;\\");</script>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: attribute value must after \\"=\\"",
      Object {
        "columnNumber": 27,
        "lineNumber": 1,
      },
    ],
    Array [
      "warning",
      "unclosed xml attribute",
      Object {
        "columnNumber": 27,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <textarea>alert(a<b&&c?"<br>":">>");</textarea> 1`] = `
Object {
  "actual": "<textarea>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\"&gt;&gt;\\");</textarea>",
  "errors": Array [
    Array [
      "error",
      "element parse error: Error: attribute value must after \\"=\\"",
      Object {
        "columnNumber": 29,
        "lineNumber": 1,
      },
    ],
    Array [
      "warning",
      "unclosed xml attribute",
      Object {
        "columnNumber": 29,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer text/xml: script <ul><li>abc<li>def</ul> 1`] = `
Object {
  "actual": "<ul><li/>abc<li/>def</ul>",
  "errors": Array [
    Array [
      "warning",
      "unclosed xml attribute",
      Object {
        "columnNumber": 16,
        "lineNumber": 1,
      },
    ],
    Array [
      "warning",
      "unclosed xml attribute",
      Object {
        "columnNumber": 16,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer unclosed html <html title = 1/> 1`] = `
Object {
  "actual": "<html title=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"1\\" missed quot(\\")!",
      Object {
        "columnNumber": 15,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer unclosed html <html title =1/2></html> 1`] = `
Object {
  "actual": "<html title=\\"1/2\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"1/2\\" missed quot(\\")!",
      Object {
        "columnNumber": 14,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer unclosed html <html title/> 1`] = `
Object {
  "actual": "<html title=\\"title\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
}
`;

exports[`html normalizer unclosed html <html title= 1/> 1`] = `
Object {
  "actual": "<html title=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"1\\" missed quot(\\")!",
      Object {
        "columnNumber": 14,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html normalizer unclosed html <html><meta><link><img><br><hr><input></html> 1`] = `
Object {
  "actual": "<html xmlns=\\"http://www.w3.org/1999/xhtml\\"><meta/><link/><img/><br/><hr/><input/></html>",
}
`;
